--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "FEC Hack Reactor Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test":  "jest",
     "start": "nodemon server/index.js",
     "react": "webpack --watch"
   },
