--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "FEC Hack Reactor Project",
   "main": "index.js",
   "scripts": {
-    "test":  "jest",
+    "test": "jest",
     "start": "nodemon server/index.js",
     "react": "webpack --watch"
   },
@@ -23,6 +23,12 @@
     "@babel/preset-env": "^7.13.5",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "webpack": "^5.24.1",
     "webpack-cli": "^4.5.0"
