--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,16 @@
-version: 2.1
+version: '2.1'
 orbs:
-  node: circleci/node@3.0.0
+  node: circleci/node@14.15.1
 jobs:
-  build:
+  test:
+    docker:
+      - image: 'cimg/base:stable'
     working_directory: ~/catwalk
     steps:
+      - checkout
+      - run: npm install
       - run: npm test
+workflows:
+  test_my_app:
+    jobs:
+      - test
