--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     working_directory: ~/catwalk
     steps:
       - checkout
-      - run: npm test
+      - run: npx test
 workflows:
   test_my_app:
     jobs:
