--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: '2.1'
 orbs:
-  node: circleci/welcome-orb@0.4.1
+  node: circleci/node@2.0.2
 jobs:
   test:
     docker:
@@ -8,7 +8,7 @@ jobs:
     working_directory: ~/catwalk
     steps:
       - checkout
-      - run: npx test
+      - run: npx jest
 workflows:
   test_my_app:
     jobs:
