--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,7 @@
 version: '2.1'
 orbs:
   node: circleci/node@2.0.2
-jobs:
-  test:
-    docker:
-      - image: 'cimg/base:stable'
-    working_directory: ~/catwalk
-    steps:
-      - checkout
-      - run: npx jest
 workflows:
-  test_my_app:
+  node-tests:
     jobs:
-      - test
+      - node/test
