--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "styled-components": "^5.2.1"
   }
 }
