--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
+    "antd": "^4.12.3",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-rating-stars-component": "^2.2.0",
     "styled-components": "^5.2.1"
   }
 }
