--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
   }
 }
