--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "FEC Hack Reactor Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose",
     "start": "nodemon server/index.js",
-    "react": "webpack --watch"
+    "react": "webpack --watch",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
